<resources>
    <string name="app_name">SDKDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="param_tag">Tag:</string>
    <string name="param_value">Value:</string>
    <string name="inputPassWord">Please enter password</string>
    <string name="dialog_ok">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_cancel_space">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_confirm_space">Confirm</string>
    <string name="msg_check_first">Please finish or cancel the current operation first...</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="msg_common_succ">Exec Success</string>
    <string name="msg_common_failed">Exec Failed</string>
    <string name="common_pin_key">PIN Key</string>
    <string name="common_track_key">Track Key</string>
    <string name="common_mac_key">MAC Key</string>
    <string name="common_first_track">First Track:</string>
    <string name="common_second_track">Second Track:</string>
    <string name="common_third_track">Third Track:</string>
    <string name="common_exception">Exception</string>
    <string name="common_slot">Slot:</string>
    <string name="common_card">Card:</string>
    <string name="common_card_type">Card Type:</string>
    <string name="common_decrypt">Decrypt</string>
    <string name="common_encrypt">Encrypt</string>
    <string name="common_nonsupport">Nonsupport</string>
    <string name="msg_device_connected">Device has already connected</string>
    <string name="msg_device_conn_error">Device connection occurs exceptions</string>
    <string name="init_coordinate">Init coordinate:</string>
    <string name="is_processing">is Processing</string>
    <string name="log_press_keypad">Pressed keypad:</string>
    <string name="log_press_back">Pressed back:</string>
    <string name="log_is_user_canceled">Is UserCanceled</string>
    <string name="log_is_success">Is Success</string>
    <string name="log_enter_null">Enter is empty</string>
    <string name="log_enter_success">Enter successfully:</string>
    <string name="log_entery_pwd_exception">Enter password exception</string>
    <string name="log_enter_pwd_timeout">Enter password timeout</string>
    <string name="msg_device_connecting">Device connecting...</string>
    <string name="msg_device_disconn_client">The device is automatically disconnected by the user!</string>
    <string name="msg_device_link_disconn_exeception">The device connection is abnormally disconnected!</string>
    <string name="msg_device_manager_inited">N900 device manager has initialised!</string>
    <string name="msg_device_conn_succ">Device connection is successful.</string>
    <string name="msg_conn_exception">Connection exception, please check the device or re-connect...</string>
    <string name="msg_device_disconn_succ">Device disconnected successfully...</string>
    <string name="msg_device_disconn_exception">Device disconnected exception:</string>
    <string name="device_type">Device type:</string>
    <string name="connect_type">Connect type:</string>
    <string name="msg_trans_sccess">Execute sccess</string>
    <string name="msg_trans_tc">Transaction approved</string>
    <string name="msg_trans_gac1_aac">Transaction GAC1 decline</string>
    <string name="msg_trans_gac2_aac">Transaction GAC2 decline</string>
    <string name="msg_trans_failed">Execute failed</string>
    <string name="msg_trans_exceed_limit">The transaction amount exceeds the limit</string>
    <string name="msg_trans_result">&amp;gt;&amp;gt;&amp;gt;&amp;gt;【Transaction completed】, the transaction results:</string>
    <string name="msg_trans_error_no_supported_app">Can not find supported application</string>
    <string name="msg_trans_error_offline_data_auth_failed">Offline data authentication failed</string>
    <string name="msg_trans_error_holder_auth_failed">Cardholder authentication failed</string>
    <string name="msg_trans_error_card_locked">Card locked</string>
    <string name="msg_trans_error_card_expired">Card expired</string>
    <string name="msg_trans_error_card_not_effected">Card not valid</string>
    <string name="msg_trans_error_ecash_nsf">Insufficient e-cash balance</string>
    <string name="msg_error_ec_load_exceed_limit">EC load amount exceeded the limit</string>
    <string name="msg_trans_error_script_execut_error">Script execution error</string>
    <string name="msg_trans_error_script_transfinite">Script limit</string>
    <string name="msg_trans_error_pre_money_limit">Pre-processing input amount exceeds limit</string>
    <string name="msg_trans_error_pure_ecash_cant_online">Pure e-cash card can not be online</string>
    <string name="msg_trans_error_card_reject">Card rejected</string>
    <string name="msg_trans_error_details">&amp;gt;&amp;gt;&amp;gt;&amp;gt;Specific error reason:</string>
    <string name="msg_term_cardNo">Card No.:</string>
    <string name="msg_term_cardSN">Card SN:</string>
    <string name="msg_term_expiredDate">Card expired date:</string>
    <string name="msg_term_serviceCode">Service code:</string>
    <string name="msg_term_track2">Track 2 Equivalent Data:</string>
    <string name="msg_term_track2_ciphertext">&amp;gt;&amp;gt;&amp;gt;&amp;gt;2-track ciphertext:</string>
    <string name="msg_term_55tag">&amp;gt;&amp;gt;&amp;gt;&amp;gt;55 DE:</string>
    <string name="msg_term_script">&amp;gt;&amp;gt;&amp;gt;&amp;gt;Script:</string>
    <string name="msg_term_flushes_data">&amp;gt;&amp;gt;&amp;gt;&amp;gt;Reversal:</string>
    <string name="msg_emv_trans_failed">EMV transaction failed:</string>
    <string name="msg_ic_env_notmeet_fallback">IC Card trading environment is not satisfied: the transaction fallback...</string>
    <string name="msg_pboc_online">CT online</string>
    <string name="msg_rfqpboc_online">CL online</string>
    <string name="msg_request_online_result">onRequestOnline,result:</string>
    <string name="msg_select_app_hint">Multi-application card, please select the application!</string>
    <string name="msg_aid_name">aidName:</string>
    <string name="msg_aid">aid:</string>
    <string name="msg_trans_confirm_finish">Confirmation of transaction finish</string>
    <string name="msg_cardno_null">CardNo is null</string>
    <string name="msg_enter_6_pwd">Please enter the 6-digit password...</string>
    <string name="msg_pwd">Password:</string>
    <string name="msg_swipresult_null">SwipResult is null！</string>
    <string name="msg_is_use_ecash">Do you use e-cash?</string>
    <string name="msg_money_callback_request">Amount callback request...</string>
    <string name="msg_enter_preauto_money">Please enter the pre-authorization amount(up to 12-digits):</string>
    <string name="msg_trans_cancel">Transaction canceled</string>
    <string name="msg_preauth_money_null">Pre-authorized amount:empty</string>
    <string name="msg_preauth_money">Pre-authorized amount:</string>
    <string name="tv_ma_mpos">MPOS</string>
    <string name="tv_ma_conn_device">Con-device</string>
    <string name="tv_ma_del_device">Del-device</string>
    <string name="tv_ma_secret_manager">Key System Alg</string>
    <string name="tv_ma_clean_msg">Clean messages</string>
    <string name="msg_free_pwd">Free secret operation ...</string>
    <string name="msg_offline_pwd_enter_succ">Offline password entered successfully</string>
    <string name="msg_offline_pwd_length">Offline password entered successfully，password length:</string>
    <string name="msg_enter_succ">Entered successfully:</string>
    <string name="msg_n900_cancel_enter_pwd">KeyBoard entered password canceled</string>
    <string name="msg_select_key_manager">Please choose key system:</string>
    <string name="msg_choose_mksk_des">MKSK-DES key chose</string>
    <string name="msg_choose_dukpt_des">DUKPT-DES chose</string>
    <string name="msg_choose_dukpt_aes">DUKPT-AES chose</string>
    <string name="msg_choose_mksk_sm4">MKSK-SM4 choose</string>
    <string name="msg_choose_mksk_aes">MKSK-AES choose</string>
    <string name="msg_select_access_type">Please choose access type for extPinKeyboard:</string>
    <string name="msg_select_access_type_first">Choose access type first please!</string>
    <string name="msg_choose_default_usb">Default USB choose</string>
    <string name="msg_choose_usb">USB choose</string>
    <string name="msg_choose_serial">Serial choose</string>
    <string name="msg_choose_bluetooth">Bluetooth base choose</string>
    <string name="msg_device_conn_exception">Device connection exception:</string>
    <string name="input_pin_fail">input pin failed</string>
    <string name="msg_switch_front">---------------Switch front---------</string>
    <string name="msg_switch_back">---------------Switch back---------</string>
    <string name="msg_onresponse">---------------onResponse---------</string>
    <string name="content_sacnview_error_message">Unsupported scan types</string>
    <string name="tv_open_card">Open CardReader</string>
    <string name="tv_close_card">Close CardReader</string>
    <string name="tv_revocate_card">Revoke reading operation</string>
    <string name="msg_swipe_insert_rf_card">Please swipe, insert or stick a card...</string>
    <string name="msg_use_card_hint">Please swipe or insert the IC Card...</string>
    <string name="msg_card_info_null">Card info is null</string>
    <string name="msg_cardreader_swiper">CardReader recognizes [Swipe Card] operation</string>
    <string name="msg_swiper_result">Swiping card is successful or not：</string>
    <string name="msg_cradreader_insert">CardReader recognizes [Insert Card] operation</string>
    <string name="msg_cardreader_rfcard">CardReader recognizes [RFCard]</string>
    <string name="msg_cardreader_rfcard_cpu">CardReader recognizes [RF-CPU Card]</string>
    <string name="msg_cardreader_rfcard_m0">CardReader recognizes [M0]</string>
    <string name="msg_cardreader_rfcard_felica">CardReader recognizes [Felica]</string>
    <string name="msg_cardreader_rfcard_s50">CardReader recognizes [RF-S50 Card]</string>
    <string name="msg_cardreader_rfcard_s70">CardReader recognizes [RF-S70 Card]</string>
    <string name="msg_cardreader_rfcard_s50_pro">CardReader recognizes [RF-S50 pro Card]</string>
    <string name="msg_cardreader_rfcard_s70_pro">CardReader recognizes [RF-S70 pro Card]</string>
    <string name="msg_cardreader_undefind">;CardReader recognizes [Undefined RFCard]</string>
    <string name="msg_index_is">Index:</string>
    <string name="dialog_rf_power_on_type">Card type</string>
    <string name="dialog_rf_power_on_time_out">Time out</string>
    <string name="dialog_extended_param">The extended param</string>
    <string name="dialog_rf_power_on_extended_param_sak_hint">0x20(CPUCard A Card)\n0x08(S50 M1 Card)\n0x18(S70 M1 Card)\n0x28(Pro  Card)\n0x00(M0 Card)</string>
    <string name="dialog_rf_power_on_extended_param_sak">SAK</string>
    <string name="dialog_rf_power_on_extended_param_felica">Felica</string>
    <string name="msg_a_card">A Card</string>
    <string name="msg_b_card">B Card</string>
    <string name="msg_m1_card">M1 Card</string>
    <string name="msg_m0_card">M0 Card</string>
    <string name="msg_felica_card">Felica Card</string>
    <string name="dialog_tv_iccard_type">IC Card type：</string>
    <string name="dialog_tv_atr">atr：</string>
    <string name="dialog_tv_enter_atr">Please enter atr</string>
    <string name="dialog_tv_test_data">Test data</string>
    <string name="dialog_tv_pwdd">Password:</string>
    <string name="dialog_tv_init_address">Init address:</string>
    <string name="dialog_tv_write_lenght">The data to be wrote:</string>
    <string name="prik_mod">the private key model is:</string>
    <string name="prik_mod_exponent">the private key model exponent is:</string>
</resources>