<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rf_power_on_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_rf_power_on_type" />

        <CheckBox
            android:id="@+id/checkbox_rf_A_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_a_card" />

        <CheckBox
            android:id="@+id/checkbox_rf_B_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_b_card" />

        <CheckBox
            android:id="@+id/checkbox_rf_M1_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_m1_card" />

        <CheckBox
            android:id="@+id/checkbox_rf_M0_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_m0_card" />

        <CheckBox
            android:id="@+id/checkbox_rf_felic_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_felica_card" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/rf_power_on_time_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_rf_power_on_time_out" />

        <EditText
            android:id="@+id/edit_rf_power_on_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp5"
            android:hint="60(s)" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/extended_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_extended_param" />

            <Switch
                android:id="@+id/switch_extended_param"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extended_param_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.newland.sdkdemo.utils.MyRadioGroup
                android:id="@+id/rf_power_on_extended_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rf_power_on_extended_param_sak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_rf_power_on_extended_param_sak" />

                    <EditText
                        android:id="@+id/edit_rf_power_on_sak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp5"
                        android:hint="@string/dialog_rf_power_on_extended_param_sak_hint" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/rf_power_on_extended_param_felica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_rf_power_on_extended_param_felica" />

            </com.newland.sdkdemo.utils.MyRadioGroup>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
