<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="15sp"
            android:text="@string/param_tag"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_param_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8sp"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:text="0xFF9F01"
            android:textColor="@android:color/black"
            android:textSize="20sp">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/param_value"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_param_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8sp"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:text="@string/dialog_tv_test_data"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>